View realisation has been refactored (changed from .fxml to java classes). The model and view binding system has been redesigned. Fixed some bugs